<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signupheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/signup_id"
                android:textAlignment="center"
                android:textColor="#0B0B0B"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="48dp"
                android:layout_height="49dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toStartOf="@+id/signupheading"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cleancircle_logo" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/rect1Width"
                android:layout_height="@dimen/rect1Height"
                android:layout_marginStart="28dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupheading"
                app:srcCompat="@drawable/green_rectangle" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/baseline_person_add_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupheading" />

    <EditText
        android:id="@+id/userNIC"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/baseline_credit_card_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/userNIC"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupheading" />

    <EditText
        android:id="@+id/userADD"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/baseline_location_on_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/userADD"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/userNIC"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/userNIC"
        app:layout_constraintTop_toBottomOf="@+id/userNIC" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/userEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="@+id/userPhone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userPhone"
                app:layout_constraintTop_toBottomOf="@+id/userPhone" />

            <EditText
        android:id="@+id/userPASS"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/userPASS"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/userEmail"
        app:layout_constraintStart_toStartOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/baseline_local_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter Phone Number"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/userADD"
        app:layout_constraintStart_toStartOf="@+id/userADD"
        app:layout_constraintTop_toBottomOf="@+id/userADD" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/check_box"
        app:layout_constraintEnd_toEndOf="@+id/userPASS"
        app:layout_constraintStart_toStartOf="@+id/userPASS"
        app:layout_constraintTop_toBottomOf="@+id/userPASS" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="@dimen/btn_register"
        android:layout_height="@dimen/btn_register_height"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/btnBlack"
        android:text="@string/btn_submit_C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="180dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Already have an account? "
                android:textAlignment="center"
                android:textColor="#101010"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnSubmit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnSubmit"
                app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

            <TextView
                android:id="@+id/signuptoLogin"
                android:layout_width="50dp"
                android:layout_height="18dp"
                android:layout_marginStart="252dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_C"
                android:textAlignment="center"
                android:textColor="#1E88E5"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>